# alpr

./: CMakeLists.txt
alpr/: alpr.cc  alpr_api.cc  app.cu  buffer.cu  camera.cc  detection.cu  half.h  image.cu  main.cu  recognation.cc  run.cu  stream.cu  vid.cc
builder/: backbone_builder.py  vehicle_detection_builder.py
nn/: __init__.py  plate_detection.py  plate_recognation.py  vehicle_detection.py
nn/backbones/: __init__.py  resnet18.py
